<resources>
    <string name="app_name">solemne2_camila_faundez</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="cero">0</string>
    <string name="punto">.</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multi">x</string>
    <string name="divide">/</string>
    <string name="resultado">=</string>
    <string name="C">C</string>
    <string name="CE">CE</string>
    <string name="potencia">^</string>
    <string name="retornar">Return</string>
    <string name="vacio1"></string>

</resources>
